[metadata]
name = incr_version
version = attr: incr_version.__version__.__version__
description = Python project version auto-incrementer
author = Doug Skrypa
author_email = dskrypa@gmail.com
url = https://github.com/dskrypa/incr_version
project_urls =
    Source = https://github.com/dskrypa/incr_version
license = Apache 2.0
license_files = LICENSE
long_description = file: readme.rst
long_description_content_type = text/x-rst
classifiers =
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
include_package_data = True
entry_points = file: entry_points.txt
install_requires = psutil
packages = find:
package_dir = = src
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
dev =
    pre-commit
    ruff
